2016-11-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/Mainpage.hpp: create the client page.
	* src/Mainpage.hpp: mainpage created.
	* src/logger/Mainpage.hpp: becomes a subpage instead of the mainpage.

2016-11-23  Jérôme Pasquier  <rainbru@free.fr>

	* OLD/: recursively remove directory.

	* src/client/GameEngine.cpp (keyPressed): add F11/screenshot
	keybinding.
	* README.md: add F11 key binding for screenshot.

2016-11-21  Jérôme Pasquier  <rainbru@free.fr>

	* README.md: try to fix client key binding table.

2016-11-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (save): try to save/restore menu position.
	* src/client/MainMenu.hpp (mMenuWindow): add a member for the menu.

	* src/client/MainMenu.cpp (save): restore previous Nyi dialogs state.
	* src/client/MainMenu.cpp (save): fully handle Nyi dialogs visibility
	state.
	* src/client/MainMenu.cpp (enter): fix an event connection (Options
	button was calling onNetworkPlay).

	* src/client/CeguiDialog.cpp (setVisible): new member function.

	* src/client/GameState.cpp (loadLayout): more error check to debug
	reconfigurarion of GameEngine.
	* src/client/GameEngine.cpp (reconfigure): copy last renderer's
	config map to new one.

	* src/client/GameEngine.cpp (reconfigure): fully restarting with correct
	fullscreen status now works.
	* src/client/GameEngine.hpp (initialiseOis): new member function.

2016-11-19  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (shutdownOgre): moved here from destructor.
	* src/client/GameEngine.cpp (initialiseOgre): new protected function
	handles Ogre initialisation.
	* src/client/GameEngine.cpp (reconfigure): start to use StateSaver
	on current game state.

	* src/client/main.cpp (main): beter exception message handling.
	* src/client/GameEngine.cpp (~GameEngine): better cleanup process.
	* src/client/main.cpp (main): handle the restarting game engine.

	* src/client/GameEngine.cpp (restarting): new getter for mRestart.